		* gl_nobind
	* stdint-ified ref_gl
	* Renamed TargaHeader to targa_header_t
	* Got rid of inconsistent syntax
	* Renamed GL_TextureMode, GL_TextureAlphaMode, and GL_TextureSolidMode to GL_SetTextureMode, GL_SetTextureAlphaMode and GL_SetTextureSolidMode
	* Removed GL_DrawColoredStereoLinePair (not used)

OTHER CHANGES: 
	* Reorganised effects code
	* Renamed "pics" folder to "2d"
	
Version 0.0.8.377 (Build 377)
* Fixed disconnect and reconnect crashing the server

Version 0.0.8.371 (Build 371)
May 4, 2024

NEW FEATURES:
* Completely replaced the loadout system:
	* Weapons are now picked up in the order that you obtain them.
	* You can scroll through weapons, or press the 1-9 keys to select items.
	* Added two new cvars:
		* cl_loadout_fade controls if the loadout UI fades after it is displayed.
		* cl_loadout_fade_time controls the amount of time (in milliseconds) the loadout UI takes to fade.
* Added the ability to stretch a user interface's image to its specified size, using the UI_SetImageIsStretched function.
* Added the ability for the engine to get the total number of nanoseconds since the engine started as well as milliseconds
	* log_stats now uses more precise frametime measurement for high fps
* Added an FPS meter to cl_showinfo
* Map fixes to z_tdm_labrats, z_tdm_warehouse (fixed brushes cutting into each other)
* Major change to z_tdm_subway:
	- There are now two rails and trains
	- Each train only goes one way, so you have to be careful
* Increased client-side entity limits:
	* MAX_ENTITIES 128->2048
	* MAX_DLIGHTS 32->256

BUG FIXES:
* Fixed hover and clicked UI images not scaling with the hudscale cvar
* Fixed maps without skyboxes trying to load a nonexistent skybox by loading a sane defualt
* Fixed sending unicast data to a non-client not being properly detected
* Fixed edicts beyond the 128th not rendering on the client
	* Added warnings for when too many client entities (entity_t), dynamic lights and particles are spawned